# grrecv

./: .gitignore  README.md
grrecv/: main.cpp  meson.build  trx-cw.cpp  trx-wsjtx.cpp
grrecv.xcodeproj/: project.pbxproj
grrecv.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
